Updated resource file directory path and changed to failed test scenario

--- a/src/test/java/selenium/core/settings/config.properties
+++ b/src/test/java/selenium/core/settings/config.properties
@@ -1,2 +1,2 @@
 BaseUrl = https://www.facebook.com/
-ResourceFilesDirectory=C:\\users\\ruzaikr\\workspace\\SeleniumDemo\\src\\test\\java\\selenium\\resources\\
+ResourceFilesDirectory=D:\\eclipse_workspace\\SeleniumDemo\\src\\test\\java\\selenium\\resources\\
